# distributed-training-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_basic.py  test_communication.py  train_final.py  train_model.py  train_model_parallel.py  train_pipeline_full.py  train_pipeline_parallel.py  train_realistic.py  train_resume.py  train_with_checkpoints.py
.github/workflows/: ci.yml
checkpoints/: checkpoint_step_14.pt  checkpoint_step_2.pt  checkpoint_step_4.pt  checkpoint_step_5.pt  checkpoint_step_8.pt  checkpoint_step_9.pt
configs/: ddp_mnist.yaml  ddp_synthetic.yaml  pipeline_synthetic.yaml
examples/: ddp_mnist.py  ddp_synthetic.py  manual_allreduce.py  pipeline_synthetic.py
logs/: training_log.jsonl
tests/: _helpers.py  conftest.py  test_checkpoint.py  test_config.py  test_ddp_parity.py  test_distributed.py  test_models_data.py  test_pipeline.py
trainer/: __init__.py  checkpoint.py  cli.py  config.py  data.py  distributed.py  engine.py  logger.py  model_parallel.py  models.py  pipeline.py
